--- a/nucampsite/package.json
+++ b/nucampsite/package.json
@@ -4,8 +4,8 @@
   "description": "This is a website for the fictional campsites review site Nucamp",
   "main": "index.js",
   "scripts": {
-    "lite": "lite-server", 
-    "start": "npm run lite", 
+    "lite": "lite-server",
+    "start": "npm run lite",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Terry Mayfield",
@@ -15,6 +15,8 @@
   },
   "dependencies": {
     "bootstrap": "^4.5.2",
+    "bootstrap-social": "^5.1.1",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1"
   }
