--- a/nucampsite/package.json
+++ b/nucampsite/package.json
@@ -4,6 +4,7 @@
   "description": "This is a website for the fictional campsites review site Nucamp",
   "main": "index.js",
   "scripts": {
+    "scss": "node-sass -o css/ css/", 
     "build": "npm run clean && npm run imagemin && npm run copyfonts && npm run usemin",
     "clean": "rimraf dist",
     "imagemin": "imagemin img/* -o dist/img",
@@ -21,6 +22,7 @@
     "copyfiles": "^2.2.0",
     "imagemin-cli": "^5.1.0",
     "lite-server": "^2.6.1",
+    "node-sass": "^4.14.1",
     "onchange": "^7.0.0",
     "parallelshell": "3.0.1",
     "rimraf": "^3.0.2",
